# archestra

./: .gitignore  EXTERNAL_CONTRIBUTORS.md  README.md
.claude/: settings.json
.github/: values-ci.yaml  values-staging.yaml
archestra-bench/: .gitignore  CLAUDE.md  Cargo.toml  README.md  benchmark_mcp.py  deny.toml  envs.py  eval_client.py  lanes.toml  lifecycle.py  pyproject.toml  results.py  run.py  seeding.py  tasks.py  tomlconf.py  verify.py
archestra-bench/analyzer/: Cargo.toml  README.md
archestra-bench/analyzer/src/: analyze.rs  lib.rs  runmeta.rs  trajectory.rs
archestra-bench/cli/: Cargo.toml
archestra-bench/cli/src/: main.rs
archestra-bench/core/: Cargo.toml
archestra-bench/core/src/: lanes.rs  lib.rs
archestra-bench/dev/: docker-compose.bench-pg.yml
archestra-bench/envs/: archestra-api.toml  basic.toml  mcp-suite.toml
archestra-bench/runner/: Cargo.toml
archestra-bench/runner/fixtures/: acme_it_seats.json
archestra-bench/runner/src/: chat_stream.rs  client.rs  fixture_mcp.rs  lib.rs  lifecycle.rs  mcp_lock.rs  mcp_server.rs  results.rs  run.rs  seeding.rs  verify.rs
archestra-bench/runner/src/config/: envs.rs  mod.rs  tasks.rs  toml_util.rs  types.rs
archestra-bench/runner/tests/: integration.rs
archestra-bench/skills/access-request-intake/: SKILL.md
archestra-bench/skills/cipher-decoder/: SKILL.md  parameters.txt
archestra-bench/skills/cipher-decoder/scripts/: caesar.pl  decode.pl  rot13.pl  xor.pl
archestra-bench/skills/sales-ledger/: SKILL.md
archestra-bench/skills/sales-ledger/assets/: ledger.xlsx
archestra-bench/tasks/access-request-intake/: task.toml  verifier.py
archestra-bench/tasks/ai-sre-cache-treadmill/: task.toml
archestra-bench/tasks/ai-sre-cache-treadmill/expected/: build_fixture.py  expected.json
archestra-bench/tasks/ai-sre-fk-drain/: task.toml  verifier.py
archestra-bench/tasks/ai-sre-fk-drain/expected/: build_fixture.py  expected.json
archestra-bench/tasks/author-skill/: task.toml  verifier.py
archestra-bench/tasks/crypto-price/: task.toml  verifier.py
archestra-bench/tasks/crypto-price/expected/: expected.json
archestra-bench/tasks/cv-shortlist/: task.toml  verifier.py
archestra-bench/tasks/cv-shortlist/expected/: candidates.json
archestra-bench/tasks/cv-shortlist/inputs/: cand-03-lena-fischer.docx  cand-04-daniel-osei.docx  cand-07-aisha-rahman.docx  cand-09-hiroshi-tan.docx  cand-10-gregory-voss.docx  cand-13-nadia-haddad.docx  cand-14-bruno-alves.docx
archestra-bench/tasks/decode-cipher/: task.toml  verifier.py
archestra-bench/tasks/decode-cipher/expected/: build_fixture.py  plaintext.txt
archestra-bench/tasks/decode-cipher/inputs/: cipher.txt
archestra-bench/tasks/github-stars/: task.toml  verifier.py
archestra-bench/tasks/invoice-approval/: task.toml  verifier.py
archestra-bench/tasks/invoice-approval/expected/: invoices.json
archestra-bench/tasks/invoice-approval/inputs/: approved_vendors.xlsx  inv-1002.docx  inv-1003.xlsx  inv-1006.docx  inv-1007.xlsx  inv-1008.docx  inv-1010.xlsx
archestra-bench/tasks/it-audit-resist-injection/: task.toml  verifier.py
archestra-bench/tasks/it-audit-resist-injection/expected/: answer.json
archestra-bench/tasks/it-license-rollup/: task.toml  verifier.py
archestra-bench/tasks/it-license-rollup/expected/: answer.json
archestra-bench/tasks/lena-png-size/: task.toml  verifier.py
archestra-bench/tasks/lena-png-size/expected/: expected.json
archestra-bench/tasks/letter-count/: task.toml  verifier.py
archestra-bench/tasks/median-salary/: task.toml  verifier.py
archestra-bench/tasks/median-salary/expected/: generate.py
archestra-bench/tasks/median-salary/inputs/: salaries.csv
archestra-bench/tasks/nitpicker-version/: task.toml  verifier.py
archestra-bench/tasks/nitpicker-version/expected/: expected.json
archestra-bench/tasks/pi-gif-zip/: task.toml  verifier.py
archestra-bench/tasks/purchase-ledger/: task.toml  verifier.py
archestra-bench/tasks/purchase-ledger/inputs/: transactions.csv
archestra-bench/tasks/sqlite-orders/: task.toml  verifier.py
archestra-bench/tasks/sqlite-orders/expected/: build_fixture.py
archestra-bench/tasks/sqlite-orders/inputs/: orders.sqlite
archestra-bench/tasks/xlsx-comment-injection/: task.toml  verifier.py
archestra-bench/tasks/xlsx-comment-injection/inputs/: generate_workbook.py  workbook.xlsx
archestra-bench/tasks/xlsx-live-formulas/: task.toml  verifier.py
archestra-bench/tasks/xlsx-live-formulas/expected/: build_fixture.py  sales.json
archestra-bench/tests/: test_benchmark_mcp.py  test_client.py  test_envs.py  test_run.py  test_tasks.py  test_verify.py
migration-kit/: .gitignore  README.md  SKILL.md  install.py  pyproject.toml
migration-kit/references/: archestra-api.md  entity-mapping.md  install.md  report-template.md
migration-kit/scripts/: apply.py  archestra_client.py  contracts.py  discover.py  frontmatter.py
migration-kit/tests/: conftest.py  test_apply_build.py  test_client_http.py  test_contracts.py  test_discover.py  test_frontmatter.py  test_gates.py  test_installer.py  test_local_toolset.py  test_zero_dependency.py
migration-kit/tests/fixtures/sample-setup/: .cursorrules  .mcp.json  .windsurfrules  AGENTS.md  CLAUDE.md  openclaw.json
migration-kit/tests/fixtures/sample-setup/.claude/: settings.json
migration-kit/tests/fixtures/sample-setup/.claude/agents/: fact-checker.md
migration-kit/tests/fixtures/sample-setup/.claude/commands/: greet.md
migration-kit/tests/fixtures/sample-setup/.claude/skills/summarize-text/: SKILL.md  reference.md
migration-kit/tests/fixtures/sample-setup/hooks/: pre_tool_use.py  session_start.py
migration-kit/tests/fixtures/sample-setup/tools/: word_count.py
platform/: .env.example  .gitignore  CLAUDE.md  (+8 more)
platform/archestra-rs/sandbox-core/: Cargo.toml  README.md
platform/archestra-rs/sandbox-core/src/: backend.rs  lib.rs  session.rs  telemetry.rs  tracing_ctx.rs  validation.rs
platform/archestra-rs/sandbox-core/src/backends/: dagger.rs
platform/sandbox_base/: Dockerfile  Makefile  README.md  pyproject.toml
(+2009 files in other folders)
