# Contributor-only dev tooling for the archestra-bench benchmark.
#
# the harness drives a live archestra over HTTP and runs vendored verifiers in ephemeral uv
# environments; it reuses the migration-kit zero-dependency client by importing it on sys.path
# (see run.py's sys.path insert). this file configures the *development* loop only (types, lint).

[project]
name = "archestra-bench"
version = "0.0.0"
description = "Environment-configured agentic benchmark for Archestra (not published)."
requires-python = ">=3.11"
dependencies = [
    "coloredlogs==15.0.1",
    "fire==0.7.1",
    "joblib>=1.5.3",
    "jsonschema==4.26.0",
    "mcp==1.27.2",
    "psycopg[binary]==3.3.4",
    "tqdm>=4.68.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
# the bench modules live flat at the root; the migration-kit client is imported off sys.path
# (run.py adds it at runtime; tests need it on the path at import time too).
pythonpath = [".", "../migration-kit/scripts"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ty==0.0.44",
    "ruff==0.15.16",
    "pytest==8.4.1",
]

[tool.ty.environment]
python-version = "3.11"
# the migration-kit zero-dependency client is imported on sys.path at runtime (see run.py);
# point ty at it so its imports resolve without vendoring.
extra-paths = ["../migration-kit/scripts"]

[tool.ty.src]
# type-check only our modules; skip tests and the verbatim vendored task assets.
include = [
    "eval_client.py",
    "tasks.py",
    "tomlconf.py",
    "envs.py",
    "results.py",
    "verify.py",
    "run.py",
    "lifecycle.py",
    "seeding.py",
    "benchmark_mcp.py",
]

[tool.ruff]
line-length = 120
target-version = "py311"
# tasks/<id>/upstream is vendored verbatim from SkillsBench -- not ours to lint.
extend-exclude = ["tasks"]

[tool.ruff.lint]
select = ["F", "E", "I"]

[tool.ruff.lint.per-file-ignores]
# run.py inserts migration-kit/scripts on sys.path before importing the client (E402 by design).
"run.py" = ["E402"]

[tool.ruff.lint.isort]
# imported by filename off sys.path -- treat as first-party so import ordering is stable.
known-first-party = ["archestra_client", "contracts", "eval_client", "tasks", "tomlconf", "envs", "results", "verify", "lifecycle", "seeding", "benchmark_mcp"]
