[package]
name = "archestra_bench"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "archestra_bench"
path = "src/lib.rs"

[dependencies]
archestra-bench-core = { path = "../core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "sync"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "webpki-roots", "json", "stream", "cookies"] }
url = "2"
percent-encoding = "2"
jsonschema = "0.29"
rmcp = { version = "1.7", features = ["server", "macros", "transport-streamable-http-server"] }
axum = "0.8"
nix = { version = "0.30", features = ["process", "signal"] }
indicatif = "0.18"
tempfile = "3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
regex = "1"
tokio-postgres = { version = "0.7", default-features = false, features = ["runtime"] }
bytes = "1"
base64 = "0.22"
sha2 = "0.10"
thiserror = "2"
futures = "0.3"
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
walkdir = "2"
